Remove font sketches site.

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
               <hr>
               <p>Arbeitszeitraum: Oktober 2020</p>
               <hr>
-              <p>Projektseite: <a id="link" target="_blank" href="type-experiments/index.html">avvinter.github.io/type-experiments/index.html</a></p>              
+              <p>Produkt: <a id="link" target="_blank" href="type-experiments/index.html">Digitaldruck 170 × 280 mm , Rückstichheftung</a></p>              
             </div>
             </div>  
           <!-- Images -->        
