Remove href of font sketch subsite.

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
               <hr>
               <p>Arbeitszeitraum: Oktober 2020</p>
               <hr>
-              <p>Produkt: <a id="link" target="_blank" href="type-experiments/index.html">Digitaldruck 170 × 280 mm , Rückstichheftung</a></p>              
+              <p>Produkt: Digitaldruck 170 × 280 mm, Rückstichheftung</p>              
             </div>
             </div>  
           <!-- Images -->        
