Added Limit Screen.

--- a/Limit/Limit-Screen.html
+++ b/Limit/Limit-Screen.html
@@ -6,7 +6,7 @@
     <meta content="True" name="HandheldFriendly">
     <meta content="320" name="MobileOptimized">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Limit Typeface – Normal</title>
+	<title>Limit Typeface – Screen</title>
 	<link rel="stylesheet" type="text/css" href="css/sliders-specimen.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<style type="text/css">
@@ -21,7 +21,7 @@
 	.textinput-sliders p{font-size: 12px;letter-spacing: 0.5px;font-family:'limit-80';}
 	.inputbox{float:left;box-sizing: border-box;padding: 0px 5px 0px 5px;width:25%;}
 	.fontname{padding:10px;border-bottom:1px solid #ccc;border-bottom: 0.5px solid #ccc;}
-	#h{font-family: 'limit-normal';font-size: 30px;padding:0px 10px 10px 10px;box-sizing:border-box;border-bottom:1px solid #ccc;border-bottom: 0.5px solid #ccc;}
+	#h{font-family: 'limit-screen';font-size: 30px;padding:0px 10px 10px 10px;box-sizing:border-box;border-bottom:1px solid #ccc;border-bottom: 0.5px solid #ccc;}
 	.segment-c1{
 		font-size:28px;
 		padding:6px 10px 10px 10px;
@@ -88,13 +88,12 @@
   		overflow: hidden;
   		text-overflow:hidden;		
 	}
-	.f140{font-family: 'limit-140';}
-	.f100{font-family: 'limit-100';}
-	.f80{font-family: 'limit-80';}
-	.f56{font-family: 'limit-56';}
-	.f32{font-family: 'limit-32';}
-	.f18{font-family: 'limit-18';letter-spacing: 0.5px;}
-	.f10{font-family: 'limit-10';letter-spacing: 0.5px;}
+	.f100{font-family: 'limit-screen-100';}
+	.f80{font-family: 'limit-screen-80';}
+	.f56{font-family: 'limit-screen-56';}
+	.f32{font-family: 'limit-screen-32';}
+	.f18{font-family: 'limit-screen-18';letter-spacing: 0.5px;}
+	.f10{font-family: 'limit-screen-10';letter-spacing: 0.5px;}
 	.sans{font-family: sans-serif;font-size: 13px;}
 	p{margin:0;padding:0;/*font-variant-numeric: oldstyle-nums;*/}
 	[contenteditable] {outline: 0px solid transparent;}
@@ -200,15 +199,15 @@
 	<div style="clear:left;float:none;"></div>
 	<div class="textinput" >
  		<div id="h" contenteditable="true" spellcheck="false">
-		»Form is experienced emotionally, not by means of any construction, however cleverly it may have been tricked out, or even through proportional numbers. That is why any	discussion of aesthetics is usually rather imprecise. The aestehtic, even the beautiful, can be experimentally described but hardly proven.«
+		»But whatever may be said about the derivation of our letters from the chisel-made or pen-made letters of the past, there is no doubt whatever that neither the chisel nor the pen has now any influence at all.«
 		<br>
-		H. R. Bosshard
+		Eric Gill<!-- An Essay on Typography S. 53f.-->
 		</div>
 	</div>
 	<!-- ---------------- -->
-	<!-- Limit Normal 18 --> 
+	<!-- Limit Screen 18 --> 
     <!-- ---------------- -->
-	<div class="f18 fontname">Limit Normal 18</div>
+	<div class="f18 fontname">Limit Screen 18</div>
 
 	<div class="segment-c1 f18"><span class="tcol">
 		Dort werden Hauptbegriffe ganz willkürlich zerschnitten; die logische Gliederung, die sich zum Beispiel in der Verwendung verschiedener Schriftgrade äußern soll, wird der äußeren Form ganz rücksichtslos geopfert, indem die Hauptzeile nur Dreiviertel des Hauptbegriffs zeigt, der Rest dagegen mehrere Grade kleiner in die nächste Gruppe übernommen wird. Solche Dinge gibt es heute freilich kaum noch, aber die Starrheit axiale Anordnung läßt eben kaum eine Durcharbeitung nach logischen Gesichtspunkten in dem Grade zu, wie sie das heutige Leben fordert. Als unsichtbares künstliches Rückgrat zieht sich die Mittelachse durch das Ganze und täuscht ebenso innere Haltung vor, wie der wilhelminische fünf Zentimeter hohe steife Kragen. 
@@ -306,9 +305,9 @@
 	</div>	
 	<div style="clear:left;float:none;"></div>
 	<!-- ---------------- -->
-	<!-- Limit Normal 32 --> 
+	<!-- Limit Screen 32 --> 
     <!-- ---------------- -->
-	<div class="f32 fontname">Limit Normal 32</div>
+	<div class="f32 fontname">Limit Screen 32</div>
 
 	<div class="segment-c1 f32"><span class="tcol">
 		Dort werden Hauptbegriffe ganz willkürlich zerschnitten; die logische Gliederung, die sich zum Beispiel in der Verwendung verschiedener Schriftgrade äußern soll, wird der äußeren Form ganz rücksichtslos geopfert, indem die Hauptzeile nur Dreiviertel des Hauptbegriffs zeigt, der Rest dagegen mehrere Grade kleiner in die nächste Gruppe übernommen wird. Solche Dinge gibt es heute freilich kaum noch, aber die Starrheit axiale Anordnung läßt eben kaum eine Durcharbeitung nach logischen Gesichtspunkten in dem Grade zu, wie sie das heutige Leben fordert. Als unsichtbares künstliches Rückgrat zieht sich die Mittelachse durch das Ganze und täuscht ebenso innere Haltung vor, wie der wilhelminische fünf Zentimeter hohe steife Kragen. 
@@ -406,9 +405,9 @@
 	</div>	
 	<div style="clear:left;float:none;"></div>
 	<!-- ---------------- -->
-	<!-- Limit Normal 56 --> 
+	<!-- Limit Screen 56 --> 
     <!-- ---------------- -->
-	<div class="f56 fontname">Limit Normal 80</div>
+	<div class="f56 fontname">Limit Screen 80</div>
 
 	<div class="segment-c1 f56"><span class="tcol">
 		Dort werden Hauptbegriffe ganz willkürlich zerschnitten; die logische Gliederung, die sich zum Beispiel in der Verwendung verschiedener Schriftgrade äußern soll, wird der äußeren Form ganz rücksichtslos geopfert, indem die Hauptzeile nur Dreiviertel des Hauptbegriffs zeigt, der Rest dagegen mehrere Grade kleiner in die nächste Gruppe übernommen wird. Solche Dinge gibt es heute freilich kaum noch, aber die Starrheit axiale Anordnung läßt eben kaum eine Durcharbeitung nach logischen Gesichtspunkten in dem Grade zu, wie sie das heutige Leben fordert. Als unsichtbares künstliches Rückgrat zieht sich die Mittelachse durch das Ganze und täuscht ebenso innere Haltung vor, wie der wilhelminische fünf Zentimeter hohe steife Kragen. 
@@ -506,9 +505,9 @@
 	</div>	
 	<div style="clear:left;float:none;"></div>
 	<!-- ---------------- -->
-	<!-- Limit Normal 80 --> 
+	<!-- Limit Screen 80 --> 
     <!-- ---------------- -->
-	<div class="f80 fontname">Limit Normal 80</div>
+	<div class="f80 fontname">Limit Screen 80</div>
 
 	<div class="segment-c1 f80"><span class="tcol">
 		Dort werden Hauptbegriffe ganz willkürlich zerschnitten; die logische Gliederung, die sich zum Beispiel in der Verwendung verschiedener Schriftgrade äußern soll, wird der äußeren Form ganz rücksichtslos geopfert, indem die Hauptzeile nur Dreiviertel des Hauptbegriffs zeigt, der Rest dagegen mehrere Grade kleiner in die nächste Gruppe übernommen wird. Solche Dinge gibt es heute freilich kaum noch, aber die Starrheit axiale Anordnung läßt eben kaum eine Durcharbeitung nach logischen Gesichtspunkten in dem Grade zu, wie sie das heutige Leben fordert. Als unsichtbares künstliches Rückgrat zieht sich die Mittelachse durch das Ganze und täuscht ebenso innere Haltung vor, wie der wilhelminische fünf Zentimeter hohe steife Kragen. 
@@ -606,9 +605,9 @@
 	</div>	
 	<div style="clear:left;float:none;"></div>
 	<!-- ---------------- -->
-	<!-- Limit Normal 100 --> 
+	<!-- Limit Screen 100 --> 
     <!-- ---------------- -->
-	<div class="f100 fontname">Limit Normal 100</div>
+	<div class="f100 fontname">Limit Screen 100</div>
 
 	<div class="segment-c1 f100"><span class="tcol">
 		Dort werden Hauptbegriffe ganz willkürlich zerschnitten; die logische Gliederung, die sich zum Beispiel in der Verwendung verschiedener Schriftgrade äußern soll, wird der äußeren Form ganz rücksichtslos geopfert, indem die Hauptzeile nur Dreiviertel des Hauptbegriffs zeigt, der Rest dagegen mehrere Grade kleiner in die nächste Gruppe übernommen wird. Solche Dinge gibt es heute freilich kaum noch, aber die Starrheit axiale Anordnung läßt eben kaum eine Durcharbeitung nach logischen Gesichtspunkten in dem Grade zu, wie sie das heutige Leben fordert. Als unsichtbares künstliches Rückgrat zieht sich die Mittelachse durch das Ganze und täuscht ebenso innere Haltung vor, wie der wilhelminische fünf Zentimeter hohe steife Kragen. 
