--- a/Limit/Limit-Parameter.html
+++ b/Limit/Limit-Parameter.html
@@ -50,7 +50,7 @@
 	#ham{background-image: url('img/hamlines.svg');}
 	#ham:hover{background-color: #f6f6f6;}
 	input[type=checkbox]{display: none;}	
-	@media only screen and (max-width: 600px) {
+	@media only screen and (max-width: 679px) {
 	/*toggle mobile- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 	.nava{height:40px;width:40px; float:right;}
 	.nava:hover{cursor: pointer;}
@@ -67,7 +67,7 @@
 		.glyphbox{width:20%;}
     		.f{border-right: 1px solid #fff;}
 	}
-    @media only screen and (min-width: 601px) and (max-width: 800px) {
+    @media only screen and (min-width: 680px) and (max-width: 800px) {
     	.header{border-bottom:1px solid #ccc;border-bottom: 0.5px solid #ccc;}
     		.inputbox{width:50%;}
     		.segment-c2{column-count: 1;}
@@ -91,7 +91,7 @@
 
     function checkwidth(){
     	var w = window.innerWidth;
-    	if(w<601){document.getElementById("ham").style.display= "inline-block";}
+    	if(w<680){document.getElementById("ham").style.display= "inline-block";}
     	else {document.getElementById("ham").style.display= "none";}
     }
 </script>
@@ -107,6 +107,7 @@
 	<input id="check" class="ham" type="checkbox">
 	<div class="f80 navigation navtoggle">
 		<a href="Limit-Normal.html">Limit Normal</a>
+		<a href="Limit-Screen.html">Limit Screen</a>
 		<a href="Limit-Slab.html">Limit Slab</a>
 		<a href="Limit-Parameter.html">Limit Parameter</a>
 		<a href="Limit-Inline.html">Limit Inline</a>
