--- a/Limit/Limit-Specimen.html
+++ b/Limit/Limit-Specimen.html
@@ -46,7 +46,7 @@
 	#ham{background-image: url('img/hamlines.svg');}
 	#ham:hover{background-color: #f6f6f6;}
 	input[type=checkbox]{display: none;}	
-	@media only screen and (max-width: 600px) {
+	@media only screen and (max-width: 679px) {
 	/*toggle mobile- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 	.nava{height:40px;width:40px; float:right;}
 	.nava:hover{cursor: pointer;}
@@ -61,7 +61,7 @@
 		.navigation a:last-child{border-bottom: none;}
 		.navigation a:first-child{border-top:1px solid #ccc;border-top:0.5px solid #ccc;}
 	}
-    @media only screen and (min-width: 601px) and (max-width: 800px) {
+    @media only screen and (min-width: 680px) and (max-width: 800px) {
     	.header{border-bottom:1px solid #ccc;border-bottom: 0.5px solid #ccc;}
     		.inputbox{width:50%;}
     		.segment-c2{column-count: 1;}
@@ -81,7 +81,7 @@
     document.getElementById("h").style['font-variation-settings'] = "'wght'" + oldY;
     function checkwidth(){
     	var w = window.innerWidth;
-    	if(w<601){document.getElementById("ham").style.display= "inline-block";}
+    	if(w<680){document.getElementById("ham").style.display= "inline-block";}
     	else {document.getElementById("ham").style.display= "none";}
     }
 </script>
@@ -98,6 +98,7 @@
 	<input id="check" class="ham" type="checkbox">
 	<div class="f80 navigation navtoggle">
 		<a href="Limit-Normal.html">Limit Normal</a>
+		<a href="Limit-Screen.html">Limit Screen</a>
 		<a href="Limit-Slab.html">Limit Slab</a>
 		<a href="Limit-Parameter.html">Limit Parameter</a>
 		<a href="Limit-Inline.html">Limit Inline</a>
