Load bold font before it used in CSS.

--- a/Limit/Limit-Normal.html
+++ b/Limit/Limit-Normal.html
@@ -14,14 +14,14 @@
     .wrap{margin:0 auto;max-width: 1000px;background-color: white;}
 	.header{padding:10px;padding-bottom:6px;/*border-bottom:1px solid #ccc;border-bottom: 0.5px solid #ccc;*/}
 	.navigation{width:100%;border-bottom:1px solid #ccc;border-bottom: 0.5px solid #ccc;box-sizing: border-box;padding:0;float:left;}
-	.navigation a{padding:5px 8px 8px 8px; text-decoration:none; color:#000;float:left;font-family:'limit-normal';font-variation-settings:'wght' 100;font-family: 'limit-80'}
+	.navigation a{padding:5px 8px 8px 8px; text-decoration:none; color:#000;float:left;font-family:'limit-normal';font-family: 'limit-80'}
 	.navigation a:hover{text-decoration:none; background-color:#eee;}
 	.textinput-sliders{width:100%;background-color:;padding:7px 5px 10px 5px;box-sizing: border-box;font-size: 12px;letter-spacing: 0.5px;font-family: 'limit-80';}
 	.textinput-sliders span{font-size: 12px;letter-spacing: 0.5px;font-family:'limit-80';}
 	.textinput-sliders p{font-size: 12px;letter-spacing: 0.5px;font-family:'limit-80';}
 	.inputbox{float:left;box-sizing: border-box;padding: 0px 5px 0px 5px;width:25%;}
 	.fontname{padding:10px;border-bottom:1px solid #ccc;border-bottom: 0.5px solid #ccc;}
-	#h{font-family: 'limit-normal';font-size: 30px;padding:0px 10px 10px 10px;box-sizing:border-box;border-bottom:1px solid #ccc;border-bottom: 0.5px solid #ccc;}
+	#h{font-family: 'limit-normal';font-variation-settings:'wght' 100;font-size: 30px;padding:0px 10px 10px 10px;box-sizing:border-box;border-bottom:1px solid #ccc;border-bottom: 0.5px solid #ccc;}
 	.segment-c1{
 		font-size:28px;
 		padding:6px 10px 10px 10px;
