--- a/Limit/Limit-Screen.html
+++ b/Limit/Limit-Screen.html
@@ -14,7 +14,7 @@
     .wrap{margin:0 auto;max-width: 1000px;background-color: white;}
 	.header{padding:10px;padding-bottom:6px;/*border-bottom:1px solid #ccc;border-bottom: 0.5px solid #ccc;*/}
 	.navigation{width:100%;border-bottom:1px solid #ccc;border-bottom: 0.5px solid #ccc;box-sizing: border-box;padding:0;float:left;}
-	.navigation a{padding:5px 8px 8px 8px; text-decoration:none; color:#000;float:left;font-family:'limit-normal';font-variation-settings:'wght' 100;font-family: 'limit-80'}
+	.navigation a{padding:5px 8px 8px 8px; text-decoration:none; color:#000;float:left;font-family: 'limit-80'}
 	.navigation a:hover{text-decoration:none; background-color:#eee;}
 	.textinput-sliders{width:100%;background-color:;padding:7px 5px 10px 5px;box-sizing: border-box;font-size: 12px;letter-spacing: 0.5px;font-family: 'limit-80';}
 	.textinput-sliders span{font-size: 12px;letter-spacing: 0.5px;font-family:'limit-80';}
