--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="wrapper">
         <div id="kopf">
             <div class="name-container">
-                <div class="name">Aaron Winter</div> 
+                <div class="name">Aaron Winter</div><span class="b">.</span>
             </div>
           <div class="clear"></div>
         </div>
