Correct Rotor subsite id was missing.

--- a/rotor/rotor.html
+++ b/rotor/rotor.html
@@ -43,6 +43,6 @@
 	</style>
 </head>
 <body>
-	<span>Umdrehung in Grad: <span class="degree"></span>°</span>
+	<span>Umdrehung in Grad: <span id="degree"></span>°</span>
 </body>
 </html>
