try p as inline-block

--- a/rotor/rotor.html
+++ b/rotor/rotor.html
@@ -39,7 +39,7 @@
 	console.error(message);
 	});
 	</script>
-	<style type="text/css">p{margin:0;padding:0;}</style>
+	<style type="text/css">p{margin:0;padding:0;display:inline-block;}</style>
 </head>
 <body>
 	<p>Umdrehung in Grad: <p id="degree"></p>°</p>
