Test Limit Screen Rotation in webseite reactive to orientation sensors. Correction 3.

--- a/rotor/rotiertest.html
+++ b/rotor/rotiertest.html
@@ -39,7 +39,7 @@
 	  // Do stuff with the new orientation data
 	  document.getElementById("degreeNew").innerText = Math.round(alpha);
 	  document.getElementById("varsetNew").innerText = Math.round((alpha / 360.0) * 1000.0);
-	  document.getElementById("rot").style['font-variation-settings'] = "'rttn'" + interpolval;
+	  document.getElementById("h").style['font-variation-settings'] = "'rttn'" + interpolval;
 	}
 	</script>
 </head>
