Test Limit Screen Rotation in webseite reactive to orientation sensors. Correction 4.

--- a/rotor/rotiertest.html
+++ b/rotor/rotiertest.html
@@ -50,11 +50,11 @@
 
 <button onclick='requestOrientationPermission();'>Request orientation permission</button>
 
-<div id="h" contenteditable="true" spellcheck="false"><p id="rot">PostScript hat sich über die Jahre hinweg zu einem Standard in der Druckindustrie entwickelt, wurde aber größtenteils vom Portable Document Format (PDF) verdrängt, das ebenfalls von Adobe entwickelt wurde und viele Eigenschaften von PostScript übernommen oder verbessert hat.
+<div id="h" contenteditable="true" spellcheck="false">PostScript hat sich über die Jahre hinweg zu einem Standard in der Druckindustrie entwickelt, wurde aber größtenteils vom Portable Document Format (PDF) verdrängt, das ebenfalls von Adobe entwickelt wurde und viele Eigenschaften von PostScript übernommen oder verbessert hat.
 
 Desktoppublishing-Programme verfügen in der Regel über eine PostScript-Exportfunktion. Praktisch kann aber aus jeder Anwendung (zum Beispiel aus beliebigen Textverarbeitungsprogrammen) mit Hilfe eines PostScript-Druckertreibers PostScript-Code erzeugt werden, der entweder direkt an ein postscriptfähiges Ausgabegerät gesendet oder in eine Datei geschrieben werden kann. Einzelne Seiten bzw. Grafiken im PostScript-Format können von Desktoppublishing-Programmen und einigen anderen Anwendungen in der Form von Encapsulated-PostScript-Dateien auch importiert werden.
 
-In unixähnlichen Betriebssystemen ist es üblich, dass Anwendungsprogramme Druckaufträge in PostScript an den Druckerserver oder das lokale Drucksystem senden. Dieses rechnet die PostScript-Daten, meist mit Hilfe von Ghostscript, in gerätespezifischen Code um. </p></div>
+In unixähnlichen Betriebssystemen ist es üblich, dass Anwendungsprogramme Druckaufträge in PostScript an den Druckerserver oder das lokale Drucksystem senden. Dieses rechnet die PostScript-Daten, meist mit Hilfe von Ghostscript, in gerätespezifischen Code um.</div>
 <script type="text/javascript">
 	var tempY;
 	var weightslider = document.getElementById("weight_slider");
