Test Limit Screen Rotation in webseite reactive to orientation sensors. Correction 5.

--- a/rotor/rotiertest.html
+++ b/rotor/rotiertest.html
@@ -49,7 +49,12 @@
 </div>
 
 <button onclick='requestOrientationPermission();'>Request orientation permission</button>
-
+<p>Umdrehung in Grad: <p id="degree"></p>°</p>
+	<br>
+	<p>Variation Font Setting: <p id="varset"></p></p><br>
+	<p>Umdrehung in Grad: <p id="degreeNew"></p>°</p>
+	<br>
+	<p>Variation Font Setting: <p id="varsetNew"></p></p><br>
 <div id="h" contenteditable="true" spellcheck="false">PostScript hat sich über die Jahre hinweg zu einem Standard in der Druckindustrie entwickelt, wurde aber größtenteils vom Portable Document Format (PDF) verdrängt, das ebenfalls von Adobe entwickelt wurde und viele Eigenschaften von PostScript übernommen oder verbessert hat.
 
 Desktoppublishing-Programme verfügen in der Regel über eine PostScript-Exportfunktion. Praktisch kann aber aus jeder Anwendung (zum Beispiel aus beliebigen Textverarbeitungsprogrammen) mit Hilfe eines PostScript-Druckertreibers PostScript-Code erzeugt werden, der entweder direkt an ein postscriptfähiges Ausgabegerät gesendet oder in eine Datei geschrieben werden kann. Einzelne Seiten bzw. Grafiken im PostScript-Format können von Desktoppublishing-Programmen und einigen anderen Anwendungen in der Form von Encapsulated-PostScript-Dateien auch importiert werden.
